--- a/src/Skoruba.Duende.IdentityServer.Admin.UI/Areas/AdminUI/Views/Shared/Common/ErrorPage.cshtml
+++ b/src/Skoruba.Duende.IdentityServer.Admin.UI/Areas/AdminUI/Views/Shared/Common/ErrorPage.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
-@using Newtonsoft.Json
 @using Skoruba.Duende.IdentityServer.Admin.UI.Helpers
+@using System.Text.Json
+@using System.Text.Json.Serialization
 @inject IViewLocalizer Localizer
 @{
 	ViewData["Title"] = "Error";
@@ -10,12 +11,7 @@
 
 @if (ViewBag.Notifications != null)
 {
-	var settings = new JsonSerializerSettings
-	{
-		TypeNameHandling = TypeNameHandling.All
-	};
-
-	var obj = JsonConvert.DeserializeObject<List<NotificationHelpers.Alert>>(ViewBag.Notifications, settings);
+    var obj = JsonSerializer.Deserialize<List<NotificationHelpers.Alert>>(ViewBag.Notifications);
 
 	foreach (NotificationHelpers.Alert notification in obj)
 	{
